--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Spezi">
+        android:theme="@style/Theme.Spezi.SplashScreen">
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:windowSoftInputMode="adjustResize"
-            android:theme="@style/Theme.Spezi">
+            android:theme="@style/Theme.Spezi.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
