--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ coilCompose = "2.6.0"
 compileSdk = "34"
 composeBom = "2024.06.00"
 composeNavigation = "2.8.0-beta03"
+coreI18n = "1.0.0-alpha01"
 coreKtx = "1.13.1"
 coreKtxVersion = "1.5.0"
 coreTestingVersion = "2.2.0"
@@ -28,7 +29,7 @@ foundation = "1.6.8"
 googleGmsGoogleServices = "4.4.2"
 googleid = "1.1.0"
 gson = "2.11.0"
-guava = "32.1.3-android"
+guava = "32.1.3-android" # is a fixed version which works with all other dependencies
 healthConnectClient = "1.1.0-alpha07"
 hiltNavigation = "1.2.0"
 hiltVersion = "2.51"
@@ -50,6 +51,7 @@ targetSdk = "34"
 testCoreVersion = "1.5.0"
 timberVersion = "5.0.1"
 truth = "1.4.2"
+vico = "2.0.0-alpha.23"
 
 # Please keep [libraries] block sorted. Select all items and in Android Studio `Edit > Sort Lines`
 [libraries]
@@ -59,6 +61,7 @@ android-gradle = { group = "com.android.tools.build", name = "gradle", version.r
 android-tools-common = { group = "com.android.tools", name = "common", version.ref = "androidTools" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+androidx-core-i18n = { group = "androidx.core", name = "core-i18n", version.ref = "coreI18n" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-core-testing = { group = "androidx.arch.core", name = "core-testing", version.ref = "coreTestingVersion" }
 androidx-credentials-play-services-auth = { module = "androidx.credentials:credentials-play-services-auth", version.ref = "credentialsPlayServicesAuth" }
@@ -114,6 +117,7 @@ mockk-core = { group = "io.mockk", name = "mockk", version.ref = "mockKVersion" 
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "composeNavigation" }
 play-services-auth = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServicesAuth" }
 timber = { group = "com.jakewharton.timber", name = "timber", version.ref = "timberVersion" }
+vico-compose-m3 = { group = "com.patrykandpatrick.vico", name = "compose-m3", version.ref = "vico" }
 
 # Please keep [plugins] block sorted. Select all items and in Android Studio `Edit > Sort Lines`
 [plugins]
