--- a/.github/workflows/build-test-analyze.yml
+++ b/.github/workflows/build-test-analyze.yml
@@ -130,7 +130,9 @@ jobs:
           force-avd-creation: false
           emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: bundle exec fastlane connectedCheck
+          script: |
+            adb uninstall edu.stanford.spezi.core.design.test || true
+            bundle exec fastlane connectedCheck
       - name: Upload JaCoCo report to Codecov
         uses: codecov/codecov-action@v4
         with:
