wipe emulator data before launching android tests

--- a/.github/workflows/build-test-analyze.yml
+++ b/.github/workflows/build-test-analyze.yml
@@ -115,7 +115,7 @@ jobs:
           profile: ${{ matrix.profile }}
           arch: x86_64
           force-avd-creation: false
-          emulator-options: -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          emulator-options: -wipe-data -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: false
           script: |
             sdkmanager --list
@@ -128,11 +128,9 @@ jobs:
           profile: ${{ matrix.profile }}
           arch: x86_64
           force-avd-creation: false
-          emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+          emulator-options: -wipe-data -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
           disable-animations: true
-          script: |
-            adb uninstall edu.stanford.spezi.core.design.test || true
-            bundle exec fastlane connectedCheck
+          script: bundle exec fastlane connectedCheck
       - name: Upload JaCoCo report to Codecov
         uses: codecov/codecov-action@v4
         with:
